--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div id="card-content">
             <div class="photo-frame">
-                <img src="C:\Users\sgshi\OneDrive\Desktop\birthday-site\mom.jpeg" alt="Us" onerror="this.style.display='none'; this.parentElement.style.backgroundColor='#f0f0f0'; this.parentElement.innerHTML='<span style=\'color:#aaa\'>[Insert Photo Here]</span>'"> 
+                <img src="mom.jpeg" alt="Us" style="width:100%; height:100%; object-fit:cover;">
             </div>
             
             <h1>Happy Birthday, Mom</h1>
